<resources>
    <string name="app_name">Swoosh</string>
    <string name="background_image">Background image</string>
    <string name="app_logo">app logo</string>
    <string name="desired_league">Desired League</string>
    <string name="men">Men</string>
    <string name="women">Women</string>
    <string name="co_ed">Co-ed</string>
    <string name="next">NEXT</string>
    <string name="welcome_page">welcome page</string>
    <string name="logo">logo</string>
    <string name="get_ready">GET READY</string>
    <string name="on_going_all_out">ON GOING ALL OUT</string>
    <string name="find_a_team_in_your_city_and_dominate_the_league">Find a team in your city and dominate the league</string>
    <string name="get_started">GET STARTED</string>
    <string name="Finish">Finish</string>
</resources>